--- a/netlify.toml
+++ b/netlify.toml
@@ -1,16 +1,4 @@
-[build.environment]
-  NODE_VERSION = "18"
-
 [build]
+  command = "solid-start build"
+  functions = "netlify/functions"
   publish = "dist"
-  command = "pnpm run build"
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
-
-[[headers]]
-  for = "/manifest.webmanifest"
-  [headers.values]
-    Content-Type = "application/manifest+json"
