build: test netlify

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,7 @@
+[build.environment]
+  NETLIFY_USE_PNPM = "true"
+  NODE_VERSION = "18"
+
 [build]
   command = "solid-start build"
-  functions = "netlify/functions"
-  publish = "dist"
+  publish = "netlify"
