--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-solid": "^0.13.0",
     "prettier": "^3.0.3",
+    "solid-start-netlify": "^0.3.5",
     "solid-start-node": "^0.3.5",
     "typescript": "5.2.2",
     "unocss": "^0.55.4",
